# ai-agent-hackathon

./: README.md  mise.toml
.github/workflows/: deploy.yml  deploy_backend.yaml
flutter_client/: .gitignore  analysis_options.yaml  build.yaml  firebase.json  firepit-log.txt  mise.toml  pubspec.yaml
flutter_client/android/app/: build.gradle  google-services.json
flutter_client/ios/Runner/: GoogleService-Info.plist  Info.plist
flutter_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_client/lib/: app_router.dart  firebase_options.dart  main.dart  reference.dart.archive
flutter_client/lib/api/: api_client.dart
flutter_client/lib/api/_generated/: api_client.g.dart
flutter_client/lib/api/models/: add_child_nodes_request.dart  add_child_nodes_response.dart  complete_node_request.dart  complete_node_response.dart  detailed_roadmap_dto.dart  detailed_roadmap_response.dart
flutter_client/lib/auth/repository/: auth_repository.dart  user_api_service.dart  user_dto.dart  user_profile_dto.dart
flutter_client/lib/auth/view/: auth_screen.dart
flutter_client/lib/auth/view_model/: auth_notifier.dart  auth_state.dart
flutter_client/lib/common/model/: node.dart  (+1 more)
flutter_client/lib/providers/: nodes_provider.dart  roadmap_provider.dart
flutter_client/lib/services/: roadmap_service.dart
flutter_client/lib/widget/: node_widget.dart
flutter_client/lib/widgets/: node_detail_modal.dart
java_backend/: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
python_datamanager/: cleanup.py  main.py  map_render.py  pyproject.toml  sample1.json
(+157 files in other folders)
