[tool.poetry]
name = "firebase-sample"
version = "0.1.0"
description = "Sample project to add Firestore data using firebase_admin"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^6.0.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.10.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
